[package]
description = "Create an HTML slide deck from Markdown"
edition = "2021"
license = "CC0-1.0"
name = "slideck"
version = "0.0.3"
homepage = "https://github.com/casey/slideck"
repository = "https://github.com/casey/slideck"
autotests = false

[dependencies]
boilerplate = "1.0.0"
clap = { version = "3.1.18", features = ["derive"] }
html-escaper = "0.2.0"
pulldown-cmark = "0.9.3"
